// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba del componente GifExpertApp debe mostrar el snapShot 1`] = `
<Fragment>
  <h2>
    Gif Expert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="full metal"
      key="full metal"
    />
  </ol>
</Fragment>
`;

exports[`Prueba del componente GifExpertApp debe mostrar la lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
